# snacks_crud

./: .gitignore  Readme.md  db.sqlite3  pyproject.toml
snacks/: admin.py  models.py  urls.py  views.py
snacks/migrations/: 0001_initial.py
snacks_crud_project/: settings.py  urls.py
templates/: snack_list.html  snacks_create.html  snacks_delete.html  snacks_detail.html
