[tool.poetry]
name = "snacks_crud"
version = "0.1.0"
description = ""
authors = ["ahmadabudames <ahmadabudamesmais1999@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.6"

[tool.poetry.dev-dependencies]
black = "^21.8b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
